Fixes Lamp on Safari Browsers not loading

--- a/overlay/etc/apache2/sites-available/000-default.conf
+++ b/overlay/etc/apache2/sites-available/000-default.conf
@@ -3,6 +3,9 @@ ServerName localhost
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/
+    <IfModule mod_headers.c>
+        Header always unset Upgrade
+    </IfModule>
 </VirtualHost>
 
 <VirtualHost *:443>
